--- a/zhyldyz com-17/web5.4
+++ b/zhyldyz com-17/web5.4
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title></title>
+<title> image</title>
 <meta charset = "utf-8">
 </head>
 <body>
@@ -9,7 +9,7 @@
 <img src="img/alatoo.jpeg" alt="Alatoo" />
 </a>
 <p>
-Click on the image to see it in the browser by itself.
+Ala-Too image
 </p>
 </body>
 </html>
