--- a/zhyldyz com-17/web1.3
+++ b/zhyldyz com-17/web1.3
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang = "en">
+<mrta charset = "utf-8">
 <head>
 	<title>
 This is a web page.
 	</title>
-<meta charset = "utf-8">
 </head>
 <body>
 </body>
